# Singular-Spectrum-Analysis

./: .gitignore  CMakeLists.txt  README.md
MKL/: CMakeLists.txt  mkl_config.h  setup_mkl_14900kf.sh  ssa_block_test.c  ssa_example.c  ssa_opt.h  ssa_opt_advanced.h  ssa_opt_analysis.h  ssa_opt_forecast.h  ssa_opt_r2c.h  ssa_opt_ref.h  ssa_opt_test.c
MKL/py/: benchmark_charts.py  benchmark_rssa.R  benchmark_vs_rssa.py  benchmark_vs_rssa_speed.py  esprit_demo.ipynb  esprit_test.py  gapfill_financial_test.py  gapfill_test.py  ssa.def  ssa_challenging_tests.ipynb  ssa_demo.ipynb  ssa_denoise_demo.py  ssa_linkedin_showcase.ipynb  ssa_max_accuracy.ipynb  ssa_parameter_tests.py  ssa_real_data_tests.ipynb  ssa_wrapper.c  ssa_wrapper.py
MKL/py/.ipynb_checkpoints/: ssa_demo-checkpoint.ipynb
MKL/test/: ssa_block_test.c  ssa_cadzow_test.c  ssa_example.c  ssa_mkl_debug.c  ssa_opt_test.c  ssa_regression_test.c  ssa_vforecast_test.c  test_gapfill.c  test_mssa.c  test_ssa_forecast.c  wcorr_parallel_bench.c
docs/: CADZOW.md  ESPRIT.md  FORECAST.md  GAPFILL.md  HANKEL_MATVEC.md  INDEX.md  RANDOMIZED_SVD.md  RECONSTRUCTION.md  WCORR.md
non MKL/: ssa.h  ssa_tests.c
